# d_ML_sklearn

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/00_100_ml/: d_100_Page_ML.ipynb
docs/01_sklearn/0_d00_sklearn/: d00_sklearn_getting_started.ipynb
docs/01_sklearn/1_d0106_knn/: d0106_nearest_neighbors.ipynb  d0106_临近学习模型_cn.ipynb  d01_6_11_1_nearestneighbors.py  d01_6_12_2_kdtree.py  d01_6_50_1_nearestcentroid.py  d01_6_60_1_nearestneighbors_transformer.py  d01_6_71_1_nearestneighbors_classification.py  d01_6_eg1_plot_classification.ipynb  d01_6_eg2_plot_regression.ipynb  d01_6_eg3_plot_multioutput_face_completion.ipynb  d01_6_eg4_plot_nearest_centroid.ipynb  d01_6_eg5_approximate_nearest_neighbors.ipynb  d01_6_eg6_plot_caching_nearest_neighbors.ipynb  d01_6_eg8_plot_nca_classification.ipynb  d01_6_eg9_plot_nca_dim_reduction.ipynb
docs/01_sklearn/2_d0101_lms/: d0101_Linear_Models_en_cn.ipynb  d01_1_eg7_plot_lasso_and_elasticnet.ipynb  d01_1_eg8_plot_tomography_l1_reconstruction.ipynb  d01_1_eg9_plot_lasso_model_selection.ipynb
docs/01_sklearn/d0601_pipeline/: d0601_make_pipeline.ipynb  d0601_make_pipeline.py  d0601_pipeline.ipynb  d06_1_10_cached_pipeline.py  d06_1_11_cached_pipeline.py  d06_1_1_make_pipeline.py  d06_1_2_build_pipeline.py  d06_1_3_access_pipeline_steps..py  d06_1_4_feature_names_tracking.py  (+5 more)
src/d_ml_sklearn/: __init__.py  cli.py
tests/: __init__.py  test_d_ml_sklearn.py
(+1 files in other folders)
