[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d_ml_sklearn"
version = "0.1.0"
description = "ML platform"
readme = "README.rst"
authors = [
  {name = "DigitFu", email = "fypbjchina@gmail.com"}
]
maintainers = [
  {name = "DigitFu", email = "fypbjchina@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/fypbjchina/d_ml_sklearn/issues"
changelog = "https://github.com/fypbjchina/d_ml_sklearn/blob/master/changelog.md"
homepage = "https://github.com/fypbjchina/d_ml_sklearn"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

